# serverless_db

./: .gitignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  supabase-serverless-db-research.md  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
bench/: perf.ts
dashboard/: index.html  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx  styles.css
dashboard/src/api/: mockAdminClient.ts  types.ts
dashboard/tests/: dashboard.test.ts
deploy/: .env.example  docker-compose.distributed.yml
docs/: architecture-v2.md  compatibility-v2.md  control-plane-v2.md  dashboard-v2.md  long-term-architecture-research.md  production-review-roadmap.md  realtime-v2.md
examples/: demo.ts
examples/blog-app/: README.md  app.mjs  run.sh
reports/: local-supabase-compatibility-report.md  remote-rustfs-compat-report.md  remote-supabase-compatibility-report.md  supabase-compatibility-matrix.md
rust-core/: Cargo.toml
rust-core/src/: auth.rs  auth_store.rs  control_plane.rs  http.rs  lib.rs  main.rs  object_store.rs  policy.rs  postgrest.rs  realtime_protocol.rs  runtime.rs  runtime_utils.rs
scripts/: bootstrap-distributed-poc.sh  s3-conformance.sh  s3-fault-injection.sh  s3-http-fault-injection.sh  s3-retry-idempotency.sh  setup-github-runner.sh  supabase-compat-check.mjs
src/: auth.ts  http.ts  object-store.ts  policy.ts  runtime.ts  server.ts
tests/: poc.test.ts  supabase-sdk.test.mjs
