[package]
name = "serverless-db-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.5", optional = true }
aws-sdk-s3 = { version = "1.71", optional = true }
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
hmac = "0.12"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
tokio = { version = "1.45", features = ["full"] }

[features]
default = []
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]
